argo/networkpolicy-argocd-dex-server.yaml
# Source: argocd
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.4.5
  name: argocd-dex-server
  namespace: argo
  annotations:
    noa.re/deploy-id: 2c6002227311186b
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
          app.kubernetes.io/instance: argocd
    ports:
    - port: http
      protocol: TCP
    - port: grpc
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-dex-server
      app.kubernetes.io/instance: argocd
  policyTypes:
  - Ingress
